tests/baselines/reference/pathsValidation3.errors.txt
tsconfig.json(5,20): error TS5066: Substitutions for pattern 'foo' shouldn't be an empty array.


==== tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            "paths": {
                "foo": []
                       ~~
!!! error TS5066: Substitutions for pattern 'foo' shouldn't be an empty array.
            }
        }
    }
    
==== a.ts (0 errors) ====
    let x = 1;